--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>amongus</title>
     </head>
     <body>
-        <img src="C:\Users\powerlong\Desktop\amongus.jpg" alt="among us" width="300" height="auto">
+        <img src="amongus.jpg" alt="among us" width="300" height="auto">
         <h1>among us</h1>
         <p>这是一个among us小人，他很sus</p>
     </body>
